# chat_app

./: Cargo.toml  Readme.md  chat.html  chat.js
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: connection.rs  main.rs  message.rs  state.rs
