[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tungstenite = "0.17.3"
tokio-tungstenite = "0.17.2"
tokio = { version = "1", features = ["full"] }
url = "2.0"
log = "0.4"
env_logger = "0.9.0"