[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
tungstenite = "0.17"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
chrono = "0.4"
rand = "0.8"
futures-util = "0.3"